<resources>
    <string name="app_name">QR@SGLab</string>

    <string name="lbl__scan">Scan QR</string>
    <string name="btn__about">About / How to use?</string>
    <string name="lbl__settings">Settings</string>

    <string name="lbl__endpoint_url">Endpoint URL</string>
    <string name="lbl__username">Username</string>
    <string name="lbl__password">Password</string>
    <string name="btn__edit">Edit</string>
    <string name="btn__save">Save</string>

    <string name="message__fill_all_fields">Fill all the fields with required information</string>
    <string name="small_logo_circle">small_logo_circle</string>
    <string name="medium_logo_circle">medium_logo_circle</string>
    <string name="large_logo_circle">large_logo_circle</string>
    <string name="logo_text">logo_text</string>
    <string name="url_hint">Enter URL…</string>
    <string name="username_hint">Enter username…</string>
    <string name="password_hint">Enter password…</string>

</resources>
