<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.android.sglab.qr.SettingsActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/lbl_endpoint_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl__endpoint_url"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorSGLabLogo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/endpoint_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/endpoint_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:clickable="false"
        android:enabled="false"
        android:maxLines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorLightGray"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_endpoint_url" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="23dp"
        android:background="@color/colorSGLabLogo"
        app:layout_constraintBottom_toTopOf="@+id/lbl_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endpoint_url" />

    <TextView
        android:id="@+id/lbl_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl__username"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorSGLabLogo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:clickable="false"
        android:enabled="false"
        android:maxLines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorLightGray"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_username" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSGLabLogo"
        app:layout_constraintBottom_toTopOf="@+id/lbl_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl__password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorSGLabLogo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="163dp"
        android:background="@null"
        android:clickable="false"
        android:enabled="false"
        android:maxLines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorLightGray"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_password" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="@drawable/border_button"
        android:text="@string/btn__edit"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorSGLabLogo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/border_button"
        android:text="@string/btn__save"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorSGLabLogo"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

</android.support.constraint.ConstraintLayout>
